
public static class StringManager
{
    #region Fields const

    public const string InputMouseScrollWheel = "Mouse ScrollWheel";
    public const string InputHorizontal = "Horizontal";
    public const string InputVertical = "Vertical";
    public const string CharacterDataPath = "Data/Character/CharacterData";
    public const string EnemyDataPath = "Data/Enemy/EnemyData";
    public const string BulletDataPath = "Data/Bullets/BulletData";
    public const string TagPlayer = "Player";
    public const string UiTextWin = "Congratulations you are the Best";
    public const string UiTextWLose = "You lose! Try again";
    public const string Die = "Die";
    public const string Attack = "Attack";
    public const string Respawn = "Respawn";
    public const string Stay = "Stay";   

    #endregion

}